# Pali-Gemma

./: ReadMe.md  app.py  experiement.ipynb  finetune.py  finetune_cord.py  inference.py  pali_gemma_ft.py  pyproject.toml  test_inference.sh
pali_gemma/: config.py  load_weight.py  utils.py
pali_gemma/data/: image_preprocess.py  paligemma_preprocess.py  utils.py
pali_gemma/data_process/: paligemma_preprocess.py
pali_gemma/fine_tune/: lora.py
pali_gemma/inference/: sampling.py
pali_gemma/model/: kv_cache.py  language_model.py  pali_gemma_model.py  vision_model.py
paligemma_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: finetune_pali_cord.sh  finetune_pali_gemma.sh  inference_cord.sh  inference_lora.sh  inference_navie.sh
test/: test_load_weight.py  test_vision_model.py
